--- a/SpotifyAlarmClock/Base.lproj/Main.storyboard
+++ b/SpotifyAlarmClock/Base.lproj/Main.storyboard
@@ -454,7 +454,7 @@
                                             </subviews>
                                         </tableViewCellContentView>
                                         <connections>
-                                            <segue destination="Inc-ha-ZVM" kind="push" id="Kfv-Q5-5Tv"/>
+                                            <segue destination="IL2-SL-3EN" kind="push" identifier="spotifyUsernameSegue" id="87r-uc-wBm"/>
                                         </connections>
                                     </tableViewCell>
                                     <tableViewCell contentMode="scaleToFill" selectionStyle="blue" accessoryType="disclosureIndicator" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" textLabel="azw-zg-Hdx" detailTextLabel="upn-hp-1xJ" style="IBUITableViewCellStyleValue1" id="OFX-tm-MSl">
@@ -479,6 +479,9 @@
                                                 </label>
                                             </subviews>
                                         </tableViewCellContentView>
+                                        <connections>
+                                            <segue destination="IL2-SL-3EN" kind="push" identifier="spotifyPasswordSegue" id="MRN-AC-ypb"/>
+                                        </connections>
                                     </tableViewCell>
                                 </cells>
                             </tableViewSection>
@@ -535,6 +538,8 @@
                         </barButtonItem>
                     </navigationItem>
                     <connections>
+                        <outlet property="lbSpotifyPassword" destination="upn-hp-1xJ" id="8IK-mA-JKG"/>
+                        <outlet property="lbSpotifyUsername" destination="77j-k5-tzJ" id="Czo-XZ-FnA"/>
                         <outlet property="slBrightness" destination="CJK-oh-5Kx" id="j45-Gg-65L"/>
                         <outlet property="slMaxVolume" destination="x4X-U4-div" id="TdP-rE-8Eu"/>
                         <outlet property="swBlinkSecondsMarker" destination="Jti-c5-2Wo" id="oOm-8Q-iC0"/>
@@ -621,7 +626,7 @@
             <objects>
                 <tableViewController id="Nbm-qF-6Vc" customClass="OptionsSelectViewController" sceneMemberID="viewController">
                     <tableView key="view" opaque="NO" clipsSubviews="YES" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="grouped" separatorStyle="default" rowHeight="44" sectionHeaderHeight="10" sectionFooterHeight="10" id="NyW-V2-oBy">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <rect key="frame" x="0.0" y="64" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
                         <prototypes>
@@ -660,7 +665,7 @@
             <objects>
                 <tableViewController id="IL2-SL-3EN" customClass="TextEditViewController" sceneMemberID="viewController">
                     <tableView key="view" opaque="NO" clipsSubviews="YES" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="static" style="grouped" separatorStyle="default" rowHeight="44" sectionHeaderHeight="10" sectionFooterHeight="10" id="Qgr-X5-zc9">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="504"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
                         <sections>
@@ -1254,11 +1259,10 @@
                         <viewControllerLayoutGuide type="bottom" id="YFX-sx-0J2"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="riX-hC-Tt5">
-                        <rect key="frame" x="0.0" y="64" width="320" height="504"/>
+                        <rect key="frame" x="0.0" y="64" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
                             <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" text="About Spotify Alarm Clock" translatesAutoresizingMaskIntoConstraints="NO" id="zU0-yY-1nV">
-                                <rect key="frame" x="0.0" y="0.0" width="320" height="504"/>
                                 <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
@@ -1304,6 +1308,7 @@
         <simulatedScreenMetrics key="destination" type="retina4"/>
     </simulatedMetricsContainer>
     <inferredMetricsTieBreakers>
+        <segue reference="87r-uc-wBm"/>
         <segue reference="i1N-E3-qx4"/>
         <segue reference="odI-h1-XeF"/>
         <segue reference="jc4-iH-A1a"/>
